--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.design.widget.CoordinatorLayout
 		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:app="http://schemas.android.com/apk/res-auto"
 		xmlns:tools="http://schemas.android.com/tools"
-		android:id="@+id/linearLayout2"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:fitsSystemWindows="true"
 		tools:context=".MainActivity">
 
-	<android.support.design.widget.AppBarLayout
-			android:id="@+id/appBarLayout"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:theme="@style/AppTheme.AppBarOverlay"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
-
-		<android.support.v7.widget.Toolbar
-				android:id="@+id/toolbar"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:background="?attr/colorPrimary"
-				app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-	</android.support.design.widget.AppBarLayout>
+	<include layout="@layout/content_main"/>
 
 	<android.support.design.widget.FloatingActionButton
 			android:id="@+id/fab"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginEnd="@dimen/item_margin"
-			android:layout_marginBottom="@dimen/item_margin"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:srcCompat="@drawable/ic_camera"/>
+			android:layout_gravity="bottom|end"
+			android:layout_margin="@dimen/fab_margin"
+			android:src="@drawable/ic_camera"/>
 
-	<LinearLayout
-			android:id="@+id/fragment_container"
-			android:layout_height="match_parent"
-			android:layout_width="match_parent"
-			android:orientation="horizontal"
-			app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintVertical_bias="0.0"
-	/>
-
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
