--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,9 +28,10 @@
 
 	<LinearLayout
 			android:id="@+id/fragment_container"
-			android:layout_height="wrap_content"
+			android:layout_height="match_parent"
 			android:layout_width="match_parent"
 			android:orientation="horizontal"
+			android:layout_marginTop="56dp"
 			app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
