--- a/app/src/main/res/layout/fragment_new_food.xml
+++ b/app/src/main/res/layout/fragment_new_food.xml
@@ -74,5 +74,8 @@
 			android:layout_height="0dp"
 			android:id="@+id/newfood_save_button"
 			app:layout_constraintBottom_toBottomOf="parent" android:backgroundTint="@color/colorPrimary"
-			android:textColor="@android:color/white"/>
+			android:textColor="@android:color/white" app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
+			android:layout_marginBottom="8dp"/>
 </android.support.constraint.ConstraintLayout>
